src/objects/Foundations__c.object
<CustomObject>
    <fields>
        <fullName>AI_Consumption__c</fullName>
        <description>Number field</description>
        <inlineHelpText>Please insert the AI consumption value for this customer from the App Manager or customer</inlineHelpText>
        <label>AI Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_FR__c</fullName>
        <description>Master Detail Lookup to Account Record for Foundations</description>
        <label>Account (FR)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Foundations</relationshipLabel>
        <relationshipName>Foundations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archive_Foundation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to differentiate records that are active vs archive (compensating for "soft delete" option on Account Dashboard)</description>
        <inlineHelpText>Choose value to be true if this record should be classified as no longer active</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Picklist of environment name types for foundations</description>
        <inlineHelpText>Please choose an environment name from the available list</inlineHelpText>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Pre-Production</fullName>
                </value>
                <value>
                    <fullName>Non-Production</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FQ_Consumption_Collected__c</fullName>
        <description>Populated by Process Builder</description>
        <label>FQ Consumption Collected</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_ID18__c</fullName>
        <description>18 Character ID field not case sensitive</description>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FR ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Consumption_Collected__c</fullName>
        <description>Populated by Process Builder</description>
        <label>FY Consumption Collected</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infrastructure__c</fullName>
        <description>Picklist values provided by Joe Li</description>
        <inlineHelpText>Please provide the infrastructure based on the available options</inlineHelpText>
        <label>Infrastructure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Azure Stack</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>OpenStack</fullName>
                </value>
                <value>
                    <fullName>vSphere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_AD_Foundation_ID__c</fullName>
        <description>Foundation ID from Account Dashboard - for data migration</description>
        <label>Legacy AD Foundation ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Consumption_Collected__c</fullName>
        <inlineHelpText>Please enter the Month the collected consumption data refers to. This field will purposefully go blank upon successful save.</inlineHelpText>
        <label>Month Consumption Collected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_PR__c</fullName>
        <description>Free text field for foundation object</description>
        <label>Notes (PR)</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCF_Version__c</fullName>
        <description>Picklist values provided by Joe Li</description>
        <inlineHelpText>Please provide the PCF version</inlineHelpText>
        <label>PCF Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2.6</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>2.4</fullName>
                </value>
                <value>
                    <fullName>2.3</fullName>
                </value>
                <value>
                    <fullName>2.2</fullName>
                </value>
                <value>
                    <fullName>2.1</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>1.12</fullName>
                </value>
                <value>
                    <fullName>1.11</fullName>
                </value>
                <value>
                    <fullName>1.10</fullName>
                </value>
                <value>
                    <fullName>1.9</fullName>
                </value>
                <value>
                    <fullName>1.8</fullName>
                </value>
                <value>
                    <fullName>1.7</fullName>
                </value>
                <value>
                    <fullName>1.6</fullName>
                </value>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>PWS-E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Month_Consumption_Collected__c</fullName>
        <label>Previous Month Consumption Collected</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Consumption__c</fullName>
        <inlineHelpText>Please fill in SI Consumption for customer from Apps Manager or directly from customer</inlineHelpText>
        <label>SI Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested by Nick Barron and Joe Li for the Foundation object</description>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>number_of_Foundations__c</fullName>
        <inlineHelpText>Please enter how many foundations there are for this customer</inlineHelpText>
        <label># of Foundations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Foundations</label>
    <nameField>
        <label>Foundations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foundations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_FR__c</columns>
        <columns>Environment__c</columns>
        <columns>AI_Consumption__c</columns>
        <columns>SI_Consumption__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Foundations</fullName>
        <columns>Account_FR__c</columns>
        <columns>Environment__c</columns>
        <columns>AI_Consumption__c</columns>
        <columns>SI_Consumption__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>My Foundations</label>
    </listViews>
    <validationRules>
        <fullName>AI_changed_but_Month_did_not</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
ISCHANGED(AI_Consumption__c),
NOT(ISCHANGED(Month_Consumption_Collected__c))
)</errorConditionFormula>
        <errorDisplayField>Month_Consumption_Collected__c</errorDisplayField>
        <errorMessage>Please enter a new value for the Month Consumption Collected, since the AI Consumption has changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Month_Consumption_Blank_VR</fullName>
        <active>false</active>
        <description>Test, require Month Consumption, excluding System Admin</description>
        <errorConditionFormula>AND (
ISBLANK(TEXT( Month_Consumption_Collected__c )),
$Profile.Name != 'System Administrator')</errorConditionFormula>
        <errorMessage>Please enter a value in Month Consumption Collected</errorMessage>
    </validationRules>
</CustomObject>